# ai-interview-prep-platform

./: .env.example  .gitignore  BUILD_PROMPT.md  PHASE_1_SUMMARY.md  PROJECT_STATE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/endpoints/: __init__.py  roles.py  sessions.py
app/core/: __init__.py  config.py  logging_config.py
app/models/: domain.py  schemas.py
app/services/: __init__.py  db.py  interview_engine.py  llm_client.py
docs/: prompts.md
scripts/: test_llm.py
static/css/: style.css
static/js/: app.js
supabase/: schema.sql
templates/: index.html
tests/: test_interview_engine.py
