[project]
name = "ai-interview-prep-platform"
version = "0.1.0"
description = "AI-powered interview preparation platform with voice mock interviews and RAG-based doubt resolution"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "SIM108", # use ternary — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
